--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,7 +1,8 @@
 name: HoloGUIApi
 main: com.antarescraft.kloudy.hologuiapi.HoloGUIApi
-version: 1.0.1
+version: 1.0.2
 author: Kloudy
 website: www.antarescraft.com
 
-depend: [ProtocolLib, PlaceholderAPI]
+depend: [ProtocolLib]
+softdepend: [PlaceholderAPI]
