--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,16 @@
           <url>https://nexus.minefyre.com/content/groups/public/</url>
         </repository>
         <repository>
-		    <id>dmulloy2-repo</id>
-		    <url>http://repo.dmulloy2.net/content/groups/public/</url>
-		  </repository>
+		  <id>dmulloy2-repo</id>
+		  <url>http://repo.dmulloy2.net/content/groups/public/</url>
+		</repository>
     </repositories>
+    <distributionManagement>
+	    <repository>
+	      <id>antarescraft</id>
+	      <url>https://nexus.minefyre.com/content/repositories/HoloGUIApi</url>
+	   	</repository>
+  	</distributionManagement>
     <dependencies>
     <dependency>
         <groupId>org.spigotmc</groupId>
@@ -44,7 +50,7 @@
 	<dependency>
 		<groupId>com.antarescraft.kloudy.plugincore</groupId>
 		<artifactId>KloudyPluginCore</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.9</version>
 	</dependency>
   </dependencies>  
   <build>
@@ -110,7 +116,44 @@
             </configuration>
         </execution>
     </executions>
-</plugin>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-install-plugin</artifactId>
+      <version>2.5.2</version>
+      <configuration>
+      	<file>${plugin-folder}/HoloGUIApi.jar</file>
+      </configuration>
+      <executions>
+      	<execution>
+      		<goals>
+      			<goal>install-file</goal>
+      		</goals>
+      		<phase>install</phase>
+      	</execution>
+      </executions>
+    </plugin>
+    <plugin>
+		<artifactId>maven-deploy-plugin</artifactId>
+		<version>2.8.1</version>
+		<configuration>
+			<file>${plugin-folder}/HoloGUIApi.jar</file>
+			<groupId>com.antarescraft.kloudy.hologuiapi</groupId>
+			<artifactId>HoloGUIApi</artifactId>
+			<version>${version}</version>
+			<repositoryId>antarescraft</repositoryId>
+			<url>https://nexus.minefyre.com/content/repositories/HoloGUIApi</url>
+		</configuration>
+		<executions>
+			<execution>
+				<id>antarescraft</id>
+		        <phase>deploy</phase>
+		        <goals>
+		           <goal>deploy-file</goal>
+		        </goals>
+		     </execution>
+		  </executions>
+	  </plugin>
     </plugins>
     <resources>
       <resource>
