--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <outputFile>${plugin-folder}/HoloGUIApi.jar</outputFile>
+              <outputFile>${plugin-folder}/HoloGUIApi-${version}.jar</outputFile>
               <shadedArtifactAttached>false</shadedArtifactAttached>
               <relocations>
                 <relocation>
