--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
       <artifactId>maven-install-plugin</artifactId>
       <version>2.5.2</version>
       <configuration>
-      	<file>${plugin-folder}/HoloGUIApi-v${version}.jar</file>
+      	<file>${plugin-folder}/HoloGUIApi.jar</file>
       </configuration>
       <executions>
       	<execution>
