--- a/pom.xml
+++ b/pom.xml
@@ -6,41 +6,34 @@
    <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-	<repositories>
-	  	<repository>
-	  	  <id>Antarescraft</id>
-          <url>https://nexus.minefyre.com/content/groups/public/</url>
-        </repository>
-        <repository>
-		  <id>dmulloy2-repo</id>
-		  <url>http://repo.dmulloy2.net/content/groups/public/</url>
-		</repository>
-    </repositories>
-    <distributionManagement>
-	    <repository>
-	      <id>antarescraft</id>
-	      <url>https://nexus.minefyre.com/content/repositories/HoloGUIApi</url>
-	   	</repository>
-  	</distributionManagement>
-    <dependencies>
+  <repositories>
+    <repository>
+      <id>java.net</id>
+      <url>http://repo1.maven.org/maven2</url>
+    </repository>
+ </repositories>
+  <dependencies>
     <dependency>
         <groupId>org.spigotmc</groupId>
         <artifactId>spigot-api</artifactId>
-        <version>1.9.2-R0.1-SNAPSHOT</version>
-        <scope>provided</scope>
+        <version>1.12.2</version>
+        <scope>system</scope>
+        <systemPath>${server-root}\spigot-1.12.2.jar</systemPath>
     </dependency>
     <dependency>
     	<groupId>com.comphenix.protocol</groupId>
     	<artifactId>ProtocolLib-API</artifactId>
-    	<version>4.0</version>
-    	<scope>provided</scope>
+    	<version>4.3.0</version>
+    	<scope>system</scope>
+    	<systemPath>${plugin-folder}\ProtocolLib.jar</systemPath>
     </dependency>
     <dependency>
-         <groupId>me.clip</groupId>
-          <artifactId>placeholderapi</artifactId>
-          <version>2.5.1</version>
-         <scope>provided</scope>
-      </dependency>
+        <groupId>me.clip</groupId>
+        <artifactId>placeholderapi</artifactId>
+        <version>2.8.2</version>
+        <scope>system</scope>
+        <systemPath>${plugin-folder}\PlaceholderAPI-2.8.2.jar</systemPath>
+     </dependency>
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-io</artifactId>
